--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@iavofficial/frontend-framework",
   "version": "1.0.0",
-  "private": false,
+  "private": true,
   "license": "Apache-2.0",
   "contributors": [
     {
