--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -9,11 +9,11 @@ jobs:
   foss-check:
     runs-on: ubuntu-latest
     steps:
-      # ─── 1) Checkout ─────────────────────────────────────────────────────
+      # ─── 1) Checkout ───────────────────────────────────────────
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # ─── 2) SBOM via Syft ─────────────────────────────────────────────────
+      # ─── 2) Generate SBOM (Syft) ────────────────────────────────────────
       - name: Generate SBOM (SPDX-JSON)
         uses: anchore/sbom-action@v0
         with:
@@ -21,8 +21,9 @@ jobs:
           output-file: sbom.spdx.json
           upload-artifact: false
 
-      # ─── 3) Vulnerability Scan via Grype ─────────────────────────────────
-      - name: Scan for Vulnerabilities (Grype)
+      # ─── 3) Scan for Vulnerabilities (Grype) ────────────────────────────
+      - name: Scan for Vulnerabilities
+        id: scan
         uses: anchore/scan-action@v4
         with:
           path: '.'
@@ -30,26 +31,25 @@ jobs:
           severity-cutoff: high
           only-fixed: true
           output-format: sarif
-          output-file: grype-report.sarif
 
-      # ─── 4) Upload SARIF to GitHub Code Scanning ─────────────────────────
-      - name: Upload Grype SARIF to GitHub
-        uses: github/codeql-action/upload-sarif@v2
+      # ─── 4) Upload SARIF to GitHub Code Scanning ────────────────────────
+      - name: Upload Grype SARIF report
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: grype-report.sarif
+          sarif_file: ${{ steps.scan.outputs.sarif }}
 
-      # ─── 5) License & Policy Check via ORT ───────────────────────────────
+      # ─── 5) License & Policy Check (ORT) ────────────────────────────────
       - name: ORT License & Policy Check
         uses: oss-review-toolkit/ort-ci-github-action@v1
         with:
-          fail-on: 'violations' # abort if any deny-listed license appears
+          fail-on: 'violations'
 
-      # ─── 6) Upload All FOSS Artifacts ───────────────────────────────────
+      # ─── 6) Upload All FOSS Artifacts ──────────────────────────────────
       - name: Upload Compliance Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: foss-reports
           path: |
             sbom.spdx.json
-            grype-report.sarif
+            *.sarif
             ort-reports/**
