chore(ci): fix errors

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -9,9 +9,9 @@ jobs:
   foss-check:
     runs-on: ubuntu-latest
     steps:
-      # ─── 1) Checkout ───────────────────────────────────────────
+      # ─── 1) Checkout Your Code ───────────────────────────────────────────
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # ─── 2) Generate SBOM (Syft) ────────────────────────────────────────
       - name: Generate SBOM (SPDX-JSON)
@@ -25,6 +25,7 @@ jobs:
       - name: Scan for Vulnerabilities
         id: scan
         uses: anchore/scan-action@v4
+        continue-on-error: true
         with:
           path: '.'
           fail-build: true
@@ -32,23 +33,12 @@ jobs:
           only-fixed: true
           output-format: sarif
 
-      - name: Generate full Grype JSON report
-        run: |
-          # ensure grype is installed at v0.80.0
-          curl -sSL https://raw.githubusercontent.com/anchore/grype/v0.80.0/install.sh | sh
-          ./grype dir:. -o json > grype-report.json
-
-      - name: Upload full Grype JSON report
+      # ─── 4) Upload SARIF as an Artifact ─────────────────────────────────
+      - name: Upload Grype SARIF report
         uses: actions/upload-artifact@v4
         with:
-          name: grype-json
-          path: grype-report.json
-
-      # ─── 4) Upload SARIF to GitHub Code Scanning ────────────────────────
-      - name: Upload Grype SARIF report
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: ${{ steps.scan.outputs.sarif }}
+          name: grype-sarif
+          path: ${{ steps.scan.outputs.sarif }}
 
       # ─── 5) License & Policy Check (ORT) ────────────────────────────────
       - name: ORT License & Policy Check
@@ -56,7 +46,7 @@ jobs:
         with:
           fail-on: 'violations'
 
-      # ─── 6) Upload All FOSS Artifacts ──────────────────────────────────
+      # ─── 6) Upload All Compliance Artifacts ──────────────────────────────
       - name: Upload Compliance Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -65,3 +55,10 @@ jobs:
             sbom.spdx.json
             *.sarif
             ort-reports/**
+
+      # ─── 7) Finally: Fail If CVEs Were Detected ─────────────────────────
+      - name: Fail on Vulnerabilities
+        if: ${{ steps.scan.conclusion == 'failure' }}
+        run: |
+          echo "::error ::High/Critical vulnerabilities detected! Failing job."
+          exit 1
