--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/checkout@v4
 
       # ─── 2) Generate SBOM (Syft) ────────────────────────────────────────
-      - name: Generate SBOM (SPDX-JSON)
+      - name: Generate SBOM (CycloneDX JSON)
         uses: anchore/sbom-action@v0
         with:
-          format: spdx-json
-          output-file: sbom.spdx.json
+          format: cyclonedx-json
+          output-file: sbom.cdx.json
           upload-artifact: false
 
       # ─── 3) Scan for Vulnerabilities (Grype) ────────────────────────────
