chore(ci): update the ort-check job add ignore_dev_dependencies

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -60,7 +60,7 @@ jobs:
               NPM:
                 options:
                   resolve_scopes: false
-                  ignore_dev_dependencies: true
+                  ignore_dev_dependencies: false  # Changed from true to false
           EOF
 
       - name: Install dependencies
