--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Verify glob installation
         run: |
