chore(ci): update ignored paths

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -70,7 +70,7 @@ jobs:
 
           excludes:
             paths:
-              - pattern: '@iavofficial/**'
+              - pattern: 'packages/**'
                 reason: 'BUILD_TOOL_OF'
                 comment: 'Ignore internal packages'
             paths:
