--- a/.ort.yml
+++ b/.ort.yml
@@ -4,7 +4,7 @@ analyzer:
 
 excludes:
   paths:
-    - pattern: '@iavofficial/**'
+    - pattern: 'packages/**'
       reason: 'BUILD_TOOL_OF'
       comment: 'Ignore internal packages'
   paths:
