--- a/packages/aws-authenticator/package.json
+++ b/packages/aws-authenticator/package.json
@@ -39,7 +39,8 @@
     "@iavofficial/frontend-framework-shared": "*",
     "@reduxjs/toolkit": "^2.5.1",
     "react-redux": "^9.2.0",
-    "@mapbox/mapbox-sdk": "0.13.7"
+    "@mapbox/mapbox-sdk": "0.13.7",
+    "glob": "^10.4.5"
   },
   "peerDependencies": {
     "react": "^18.2.0",
