--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -42,7 +42,8 @@
     "react-router-dom": "^7.3.0",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
-    "react-i18next": "^12.2.0"
+    "react-i18next": "^12.2.0",
+    "glob": "^10.4.5"
   },
   "peerDependencies": {
     "react": "^18.2.0",
