--- a/packages/aws-authenticator/package.json
+++ b/packages/aws-authenticator/package.json
@@ -36,7 +36,7 @@
     "aws authenticator"
   ],
   "dependencies": {
-    "@iavofficial/frontend-framework-shared": "*",
+    "@iavofficial/frontend-framework-shared": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "react-redux": "^9.2.0",
     "@mapbox/mapbox-sdk": "0.13.7",
