--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -55,7 +55,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install root dependencies
-        run: npm ci
+        run: |
+          npm cache clean -f
+          rm -rf node_modules
+          npm i
 
       - name: Log dependency tree
         run: npm ls --all || true
