--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -55,13 +55,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install root dependencies
-        run: |
-          npm cache clean -f
-          rm -rf node_modules
-          npm i
-
-      - name: Log dependency tree
-        run: npm ls --all || true
+        run: npm ci
 
       - name: Add ORT config to repo
         run: |
