--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -43,7 +43,8 @@
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "react-i18next": "^12.2.0",
-    "glob": "^10.4.5"
+    "glob": "^10.4.5",
+    "shields": "2.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
