--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.3.3",
+    "cross-env": "^7.0.3",
+    "glob": "^10.4.5",
     "semantic-release": "^24.2.1",
     "semantic-release-monorepo": "^8.0.2",
-    "cross-env": "^7.0.3",
-    "turbo": "^2.3.3",
-    "glob": "^10.4.5"
+    "turbo": "^2.3.3"
   },
   "scripts": {
     "setup:root": "npm i",
@@ -48,5 +48,8 @@
     "apps/*",
     "packages/*"
   ],
-  "packageManager": "npm@11.0.0"
+  "packageManager": "npm@11.0.0",
+  "dependencies": {
+    "extjs-gpl": "^6.2.0"
+  }
 }
