--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -7,29 +7,34 @@ on:
 
 jobs:
   scan:
-    name: SBOM & Vulnerability Scan
+    name: SBOM & Vulnerability Scan for Root
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install dependencies at root
+      # Step 2: Install all dependencies using workspaces
+      - name: Install all dependencies with workspaces
         run: npm ci
 
-      - name: Generate SBOM (CycloneDX JSON)
+      # Step 3: Generate root-level SBOM (CycloneDX JSON)
+      - name: Generate SBOM (CycloneDX JSON) for root
         uses: anchore/sbom-action@v0
         with:
           format: cyclonedx-json
-          output-file: sbom.cdx.json
+          output-file: sbom-root.cdx.json
           upload-artifact: false
 
-      - name: Upload SBOM as artifact
+      # Step 4: Upload root-level SBOM as an artifact
+      - name: Upload root-level SBOM as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-cyclonedx
-          path: sbom.cdx.json
+          name: root-sbom-cyclonedx
+          path: sbom-root.cdx.json
 
-      - name: Scan for Vulnerabilities
+      # Step 5: Scan the root-level SBOM for vulnerabilities
+      - name: Scan SBOM for Vulnerabilities
         id: scan
         uses: anchore/scan-action@v4
         continue-on-error: true
@@ -40,29 +45,83 @@ jobs:
           only-fixed: true
           output-format: sarif
 
+      # Step 6: Upload Grype SARIF report
       - name: Upload Grype SARIF report
         uses: actions/upload-artifact@v4
         with:
           name: grype-sarif
           path: ${{ steps.scan.outputs.sarif }}
 
+      # Step 7: Fail build on high/critical vulnerabilities
       - name: Fail on High/Critical Vulnerabilities
         if: ${{ steps.scan.conclusion == 'failure' }}
         run: |
           echo "::error ::High/Critical vulnerabilities detected! Failing job."
           exit 1
 
-  ort-check:
-    name: ORT License & Policy Check
+  per-package-sboms:
+    name: SBOMs for Workspace Packages
     runs-on: ubuntu-latest
-    needs: scan
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install root dependencies
+      # Step 2: Install all dependencies with workspaces
+      - name: Install dependencies using npm workspaces
         run: npm ci
 
+      # Step 3: Generate SBOMs for each workspace package
+      - name: Generate SBOMs for each workspace package
+        run: |
+          # Prepare a directory to store SBOMs
+          mkdir -p sboms
+
+          # Iterate over workspace packages
+          for package_path in $(npm pkg get workspaces | tr -d '[:space:]"[],' | xargs -n1); do
+            # Normalize the package path
+            package="${package_path/\*/}" # Replace '*' with package folder name
+            echo "Processing package: $package"
+
+            # Check if package.json exists in the workspace directory
+            if [ -f "$package/package.json" ]; then
+              echo "Generating SBOM for workspace: $package"
+
+              # Navigate to the package directory
+              cd "$package"
+
+              # Generate the SBOM for this package
+              anchore-cli sbom generate --input . --format cyclonedx-json --output "${package/\//-}_sbom.cdx.json"
+
+              # Move the SBOM to the output directory
+              mv "${package/\//-}_sbom.cdx.json" ../sboms/
+              cd -
+            else
+              echo "Skipping $package. No package.json detected."
+            fi
+          done
+
+      # Step 4: Upload SBOMs for all workspace packages
+      - name: Upload SBOMs for workspace packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: workspace-package-sboms
+          path: sboms/
+
+  ort-check:
+    name: ORT License & Policy Check
+    runs-on: ubuntu-latest
+    needs: [scan, per-package-sboms]
+    steps:
+      # Step 1: Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Step 2: Install all workspace dependencies
+      - name: Install dependencies using npm workspaces
+        run: npm ci
+
+      # Step 3: Add ORT configuration files to the repository
       - name: Add ORT config to repo
         run: |
           mkdir -p .ort/config
@@ -76,6 +135,9 @@ jobs:
               - pattern: 'packages/**'
                 reason: 'BUILD_TOOL_OF'
                 comment: 'Ignore internal packages'
+              - pattern: 'apps/**'
+                reason: 'BUILD_TOOL_OF'
+                comment: 'Ignore internal apps'
             paths:
               - pattern: 'docs/.vite/deps/**'
                 reason: 'BUILD_TOOL_OF'
@@ -91,6 +153,7 @@ jobs:
           }
           EOF
 
+      # Step 4: Run ORT for license and policy checks
       - name: Run ORT
         id: ort
         uses: oss-review-toolkit/ort-ci-github-action@v1
